made some changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://kit.fontawesome.com/6469a54ee6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,900;1,300&display=swap" rel="stylesheet"> 
-    <title>NewYork Times clone </title>
+    <title>NewYork Times clone for Microverse</title>
 </head>
 <body>
     <header>
