Made some changes in html file

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                         Astrophysics detected ripples in the fabric of space-time — so-called gravitational waves — the signature of a universe being wrenched violently apart when it was roughly a trillionth of a trillionth of a trillionth of a second old.
                         They are the long-sought smoking-gun evidence of inflation, proof, Dr. Kovac and his colleagues say, that Dr. Guth was correct.
                         </p> 
-                        <caption>
+                        <div>
                             Unlock more free articles.
-                            <a href="http://" target="_blank" rel="noopener noreferrer">Create an account or log in</a> 
-                        </caption>
+                            <a href="#" target="_blank" rel="noopener noreferrer">Create an account or log in</a> 
+                        </div>
                         <p>
                             Inflation has been the workhorse of cosmology for 35 years, though many, including Dr. Guth, wondered whether it could ever be proved.
                         </p>
@@ -165,7 +165,7 @@
                 </div>
             </div>
         </article>
-        <article>
+        <div>
             <div class="main__article">
                 <div class="article__details">
                     <p>Dr. Kovac said the chance that the results were a fluke was only one in 10 million.</p>
@@ -186,7 +186,7 @@
                         the news.
                     </p>
                     <div>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZlfIVEy_YOA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZlfIVEy_YOA" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <span>Stanford Professor Andrei Linde celebrates physics breakthrough  Video by StanfordUniversity</span>
                     </div>
                     <p>
@@ -310,7 +310,7 @@
 
                 </div>
             </div>
-        </article>
+        </div>
         <section>
             
             <div class="suggested">
