Made some suggested changes on buttons and navbar logo.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
     <header>
         <div class="header__container">
             <div class="header__left-panel">
-                <span class="header__icons">
-                    <i class="fas fa-bars icon-1"></i>
-                    <i class="fas fa-search icon-2"></i>
-                </span>
+                <button class="header__btn"><i class="fas fa-bars icon-1"></i></button>
+                <button class="header__btn"><i class="fas fa-search icon-1"></i></button>
                 <div class="header__text"><p>space &amp; cosmos</p></div>
             </div>  
-
             <div class="logo__container">
                 <a href="#">
                 <img class="logo_img" src="images/img_logo.png" alt="NewYork Time">
@@ -230,7 +227,7 @@
                 </div>
             </div>
             <div class="cosmos">
-                <img src="images/18cosmos-2-jumbo.jpg" alt="">
+                <img class="cosmos-img" src="images/18cosmos-2-jumbo.jpg" alt="">
                 <span class="cosmos-text">
                     The Bicep2 telescope, in the foreground, 
                     was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched
@@ -294,7 +291,7 @@
                         “If you trace your cosmic roots,” said Abraham Loeb, a Harvard-Smithsonian astronomer who was not part of the team, “you wind up at inflation.”
                     </p>
                     <p class="article__end-text">
-                        A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline: Space Ripples Reveal Big Bang’s Smoking Gun. Order Reprints | Today’s Paper | Subscribe
+                        A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline: Space Ripples Reveal Big Bang’s Smoking Gun. <a class="article__end-links" href="#">Order Reprints</a> | <a class="article__end-links" href="#">Today’s Paper</a> | <a class="article__end-links" href="#">Subscribe</a>
                     </p>
                     <div class="article__end">
                         <div>
@@ -319,32 +316,32 @@
                     <div class="suggested-right">
                         <div>
                             <img class="suggested-img" src="images/img_1.jpg" alt="missile">
-                            <h3 class="suggested-title"><a href="#">launches moon mission to bring back lunar rocks.</a></h3>
+                            <h3 class="suggested-title"><a class="suggested-title-a" href="#">launches moon mission to bring back lunar rocks.</a></h3>
                             <span>Nov 23</span>
                         </div>
                         <div>
                             <img class="suggested-img" src="images/img_2.jpg" alt="observatory">
-                            <h3 class="suggested-title"><a href="">Observatory, a Great Eye on the Cosmos, Is Going Dark</a></h3>
+                            <h3 class="suggested-title"><a class="suggested-title-a" href="">Observatory, a Great Eye on the Cosmos, Is Going Dark</a></h3>
                             <span>Nov 22</span>
                         </div>
                         <div>
                             <img class="suggested-img" src="images/img_3.jpg" alt="observatory">
-                            <h3 class="suggested-title"><a href="#">Signs of recent volcanic eruptions on mars hunt at habitat for life</a></h3>
+                            <h3 class="suggested-title"><a class="suggested-title-a" href="#">Signs of recent volcanic eruptions on mars hunt at habitat for life</a></h3>
                             <span>Nov 8</span>
                         </div>
                         <div>
                             <img class="suggested-img" src="images/img_4.jpg" alt="SpaceX's">
-                            <h3 class="suggested-title"><a href="#">SpaceX's 'Resilience' Lifts 4 Astronauts Into New Era of Spaceflight</a></h3>
+                            <h3 class="suggested-title"><a class="suggested-title-a" href="#">SpaceX's 'Resilience' Lifts 4 Astronauts Into New Era of Spaceflight</a></h3>
                             <span>Nov 17</span>
                         </div>
                         <div>
                             <img class="suggested-img" src="images/img_5.jpg" alt="Microbes">
-                            <h3 class="suggested-title"><a href="#">There Microbes May Help Future Martians and Moon People Mine Metal</a></h3>
+                            <h3 class="suggested-title"><a class="suggested-title-a" href="#">There Microbes May Help Future Martians and Moon People Mine Metal</a></h3>
                             <span>Nov 14</span>
                         </div>
                         <div>
                             <img class="suggested-img" src="images/img_6.jpg" alt="Space Station">
-                            <h3 class="suggested-title"><a href="#">How the Space Station Became a Base to Launch humanity's Future</a></h3>
+                            <h3 class="suggested-title"><a class="suggested-title-a" href="#">How the Space Station Became a Base to Launch humanity's Future</a></h3>
                             <span>Nov 13</span>
                         </div>
                     </div>
@@ -375,17 +372,17 @@
                 <div class="editor__list">
                     <div>
                         <img class="editor-img" src="images/img_editors_pick_1.jpg" alt="politics">
-                        <h3 class="editor__list-title"><a href="#">He Reportrd on Pakistan's Volatile Politics. THen He Became a Story Himself</a></h3>
+                        <h3 class="editor__list-title"><a class="editor__list-title-a" href="#">He Reportrd on Pakistan's Volatile Politics. THen He Became a Story Himself</a></h3>
                         <span>Aug 2</span>
                     </div>
                     <div>
                         <img class="editor-img" src="images/img_editors_pick_2.jpg" alt="Ride">
-                        <h3 class="editor__list-title"><a href="#">Ride on the Assembly Line With the World's Most Famous Chalk</a></h3>
+                        <h3 class="editor__list-title"><a class="editor__list-title-a" href="#">Ride on the Assembly Line With the World's Most Famous Chalk</a></h3>
                         <span>Aug 5</span>
                     </div>
                     <div>
                         <img class="editor-img" src="images/img_editors_pick_3.jpg" alt="Fresh Prince">
-                        <h3 class="editor__list-title"><a href="#">What the 'Fresh Prince' of the 90's Tell Us About Rce Now</a></h3>
+                        <h3 class="editor__list-title"><a class="editor__list-title-a" href="#">What the 'Fresh Prince' of the 90's Tell Us About Rce Now</a></h3>
                         <span>Aug 9</span>
                     </div>
                 </div>  
@@ -401,104 +398,104 @@
             <div class="footer__list">
                         <ul class="footer__list-sub">
                             <li><b>NEWS</b></li>
-                            <li><a href="#">homepage</a></li>
-                            <li><a href="#">world</a></li>
-                            <li><a href="#">us</a></li>
-                            <li><a href="#">politics</a></li>
-                            <li><a href="#">election results</a></li>
-                            <li><a href="#">new york</a></li>
-                            <li><a href="#">business</a></li>
-                            <li><a href="#">tech</a></li>
-                            <li><a href="#">science</a></li>
-                            <li><a href="#">sports</a></li>
+                            <li><a class="footer__list-sub-a" href="#">homepage</a></li>
+                            <li><a class="footer__list-sub-a" href="#">world</a></li>
+                            <li><a class="footer__list-sub-a" href="#">us</a></li>
+                            <li><a class="footer__list-sub-a" href="#">politics</a></li>
+                            <li><a class="footer__list-sub-a" href="#">election results</a></li>
+                            <li><a class="footer__list-sub-a" href="#">new york</a></li>
+                            <li><a class="footer__list-sub-a" href="#">business</a></li>
+                            <li><a class="footer__list-sub-a" href="#">tech</a></li>
+                            <li><a class="footer__list-sub-a" href="#">science</a></li>
+                            <li><a class="footer__list-sub-a" href="#">sports</a></li>
                         </ul>
                         <ul class="footer__list-sub">
-                            <li><b>OPINION</b></li>
-                            <li><a href="#">todays opinion</a></li>
-                            <li><a href="#">op ed columnist</a></li>
-                            <li><a href="#">editorials</a></li>
-                            <li><a href="#">op ed contributors</a></li>
-                            <li><a href="#">letters</a></li>
-                            <li><a href="#">sunday reviews</a></li>
-                            <li><a href="#">video: opinion</a></li>
+                            <li><b class="footer__list-sub-a">OPINION</b></li>
+                            <li><a class="footer__list-sub-a" href="#">todays opinion</a></li>
+                            <li><a class="footer__list-sub-a" href="#">op ed columnist</a></li>
+                            <li><a class="footer__list-sub-a" href="#">editorials</a></li>
+                            <li><a class="footer__list-sub-a" href="#">op ed contributors</a></li>
+                            <li><a class="footer__list-sub-a" href="#">letters</a></li>
+                            <li><a class="footer__list-sub-a" href="#">sunday reviews</a></li>
+                            <li><a class="footer__list-sub-a" href="#">video: opinion</a></li>
                         </ul>
                         <ul class="footer__list-sub">
                             <li><b>ARTS</b></li>
-                            <li><a href="#">todays arts</a></li>
-                            <li><a href="#">Arts & design</a></li>
-                            <li><a href="#">books</a></li>
-                            <li><a href="#">dance</a></li>
-                            <li><a href="#">movies</a></li>
-                            <li><a href="#">pop culture</a></li>
-                            <li><a href="#">music</a></li>
-                            <li><a href="#">television</a></li>
-                            <li><a href="#">Theater</a></li>
+                            <li><a class="footer__list-sub-a" href="#">todays arts</a></li>
+                            <li><a class="footer__list-sub-a" href="#">Arts & design</a></li>
+                            <li><a class="footer__list-sub-a" href="#">books</a></li>
+                            <li><a class="footer__list-sub-a" href="#">dance</a></li>
+                            <li><a class="footer__list-sub-a" href="#">movies</a></li>
+                            <li><a class="footer__list-sub-a" href="#">pop culture</a></li>
+                            <li><a class="footer__list-sub-a" href="#">music</a></li>
+                            <li><a class="footer__list-sub-a" href="#">television</a></li>
+                            <li><a class="footer__list-sub-a" href="#">Theater</a></li>
                         </ul>
                         <ul class="footer__list-sub">
                             <li><b>LIVING</b></li>
-                            <li><a href="#">automobile</a></li>
-                            <li><a href="#">games</a></li>
-                            <li><a href="#">educaton</a></li>
-                            <li><a href="#">food</a></li>
-                            <li><a href="#">health</a></li>
-                            <li><a href="#">jobs</a></li>
-                            <li><a href="#">love</a></li>
-                            <li><a href="#">parenting</a></li>
-                            <li><a href="#">real estate</a></li>
-                            <li><a href="#">Recipies</a></li>
-                            <li><a href="#">styles</a></li>
-                            <li><a href="#">T magazine</a></li>
-                            <li><a href="#">Travel</a></li>
+                            <li><a class="footer__list-sub-a" href="#">automobile</a></li>
+                            <li><a class="footer__list-sub-a" href="#">games</a></li>
+                            <li><a class="footer__list-sub-a" href="#">educaton</a></li>
+                            <li><a class="footer__list-sub-a" href="#">food</a></li>
+                            <li><a class="footer__list-sub-a" href="#">health</a></li>
+                            <li><a class="footer__list-sub-a" href="#">jobs</a></li>
+                            <li><a class="footer__list-sub-a" href="#">love</a></li>
+                            <li><a class="footer__list-sub-a" href="#">parenting</a></li>
+                            <li><a class="footer__list-sub-a" href="#">real estate</a></li>
+                            <li><a class="footer__list-sub-a" href="#">Recipies</a></li>
+                            <li><a class="footer__list-sub-a" href="#">styles</a></li>
+                            <li><a class="footer__list-sub-a" href="#">T magazine</a></li>
+                            <li><a class="footer__list-sub-a" href="#">Travel</a></li>
                         </ul>
                         <ul class="footer__list-sub">
                             <li><b>MORE</b></li>
-                            <li><a href="#">reader center</a></li>
-                            <li><a href="#">wirecutter</a></li>
-                            <li><a href="#">live events</a></li>
-                            <li><a href="#">the learning network</a></li>
-                            <li><a href="#">tools & services</a></li>
-                            <li><a href="#">multimedia</a></li>
-                            <li><a href="#">photography</a></li>
-                            <li><a href="#">videos</a></li>
-                            <li><a href="#">News letters</a></li>
-                            <li><a href="#">time machine</a></li>
-                            <li><a href="#">NYT Store</a></li>
-                            <li><a href="#">times journey</a></li>
-                            <li><a href="#">manage my account</a></li>
+                            <li><a class="footer__list-sub-a" href="#">reader center</a></li>
+                            <li><a class="footer__list-sub-a" href="#">wirecutter</a></li>
+                            <li><a class="footer__list-sub-a" href="#">live events</a></li>
+                            <li><a class="footer__list-sub-a" href="#">the learning network</a></li>
+                            <li><a class="footer__list-sub-a" href="#">tools & services</a></li>
+                            <li><a class="footer__list-sub-a" href="#">multimedia</a></li>
+                            <li><a class="footer__list-sub-a" href="#">photography</a></li>
+                            <li><a class="footer__list-sub-a" href="#">videos</a></li>
+                            <li><a class="footer__list-sub-a" href="#">News letters</a></li>
+                            <li><a class="footer__list-sub-a" href="#">time machine</a></li>
+                            <li><a class="footer__list-sub-a" href="#">NYT Store</a></li>
+                            <li><a class="footer__list-sub-a" href="#">times journey</a></li>
+                            <li><a class="footer__list-sub-a" href="#">manage my account</a></li>
                         </ul>
                         <ul class="footer__list-sub footer-bold">
                             <li><b>SUBSCRIBE</b></li>
-                            <li><a href="#"><b>Home delivery</b></a></li>
-                            <li><a href="#"><b>digital subscriptions</b></a></li>
-                            <li><a href="#"><b>games</b></a></li>
-                            <li><a href="#"><b>cooking</b></a></li>
-                            <li><a href="#">email newletters</a></li>
-                            <li><a href="#">corporate subscriptions</a></li>
-                            <li class="footer-underline" ><a href="#">education rate</a></li>
-                            <li><a href="#">mobile application</a></li>
-                            <li><a href="#">replica edition</a></li>
-                            <li><a href="#">education rate</a></li>
-                            <li><a href="#">mobile applications</a></li>
-                            <li><a href="#">international</a></li>
-                            <li><a href="#">canada</a></li>
-                            <li><a href="#">espanol</a></li>
+                            <li><a class="footer__list-sub-a" href="#"><b>Home delivery</b></a></li>
+                            <li><a class="footer__list-sub-a" href="#"><b>digital subscriptions</b></a></li>
+                            <li><a class="footer__list-sub-a" href="#"><b>games</b></a></li>
+                            <li><a class="footer__list-sub-a" href="#"><b>cooking</b></a></li>
+                            <li><a class="footer__list-sub-a" href="#">email newletters</a></li>
+                            <li><a class="footer__list-sub-a" href="#">corporate subscriptions</a></li>
+                            <li class="footer-underline" ><a class="footer-underline-a" href="#">education rate</a></li>
+                            <li><a class="footer__list-sub-a" href="#">mobile application</a></li>
+                            <li><a class="footer__list-sub-a" href="#">replica edition</a></li>
+                            <li><a class="footer__list-sub-a" href="#">education rate</a></li>
+                            <li><a class="footer__list-sub-a" href="#">mobile applications</a></li>
+                            <li><a class="footer__list-sub-a" href="#">international</a></li>
+                            <li><a class="footer__list-sub-a" href="#">canada</a></li>
+                            <li><a class="footer__list-sub-a" href="#">espanol</a></li>
                         </ul>
             </div>
         </nav> 
         <div class="footer-end">
-            <a href="#">&copy; 2020 New York times</a>
-            <a href="#">NYTCo</a>
-            <a href="#">contact us</a>
-            <a href="#">work with us</a>
-            <a href="#">advertise</a>
-            <a href="#">T brand studio</a>
-            <a href="#">Your ad choices</a>
-            <a href="#">Privacy policy</a>
-            <a href="#">Terms of service</a>
-            <a href="#">Terms of sale</a>
-            <a href="#">site map</a>
-            <a href="#">Help</a>
-            <a href="#">subscriptions</a>
+            <a class="footer-end-a">href="#">&copy; 2020 New York times</a>
+            <a class="footer-end-a" href="#">NYTCo</a>
+            <a class="footer-end-a" href="#">contact us</a>
+            <a class="footer-end-a" href="#">work with us</a>
+            <a class="footer-end-a" href="#">advertise</a>
+            <a class="footer-end-a" href="#">T brand studio</a>
+            <a class="footer-end-a" href="#">Your ad choices</a>
+            <a class="footer-end-a" href="#">Privacy policy</a>
+            <a class="footer-end-a" href="#">Terms of service</a>
+            <a class="footer-end-a" href="#">Terms of sale</a>
+            <a class="footer-end-a" href="#">site map</a>
+            <a class="footer-end-a" href="#">Help</a>
+            <a class="footer-end-a" href="#">subscriptions</a>
         </div> 
     </footer>
 
