Made some more required changes to approve my project.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header__container">
             <div class="header__left-panel">
                 <button class="header__btn"><i class="fas fa-bars icon-1"></i></button>
-                <button class="header__btn"><i class="fas fa-search icon-1"></i></button>
+                <button class="header__btn"><i class="fas fa-search icon-2"></i></button>
                 <div class="header__text"><p>space &amp; cosmos</p></div>
             </div>  
             <div class="logo__container">
@@ -22,8 +22,8 @@
                 </a>            
             </div>
             <div class="button__container">
+                <input class="btn btn-mar" type="button" value="Log In">
                 <input class="btn" type="button" value="Subscribe Now">
-                <input class="btn" type="button" value="Log In">
             </div>
         </div>
     </header>
@@ -313,37 +313,37 @@
             <div class="suggested">
                 <div class="suggested-news">
                     <h2>More in space and Astronomy</h2>
-                    <div class="suggested-right">
-                        <div>
-                            <img class="suggested-img" src="images/img_1.jpg" alt="missile">
-                            <h3 class="suggested-title"><a class="suggested-title-a" href="#">launches moon mission to bring back lunar rocks.</a></h3>
-                            <span>Nov 23</span>
-                        </div>
-                        <div>
-                            <img class="suggested-img" src="images/img_2.jpg" alt="observatory">
-                            <h3 class="suggested-title"><a class="suggested-title-a" href="">Observatory, a Great Eye on the Cosmos, Is Going Dark</a></h3>
-                            <span>Nov 22</span>
-                        </div>
-                        <div>
-                            <img class="suggested-img" src="images/img_3.jpg" alt="observatory">
-                            <h3 class="suggested-title"><a class="suggested-title-a" href="#">Signs of recent volcanic eruptions on mars hunt at habitat for life</a></h3>
-                            <span>Nov 8</span>
-                        </div>
-                        <div>
-                            <img class="suggested-img" src="images/img_4.jpg" alt="SpaceX's">
-                            <h3 class="suggested-title"><a class="suggested-title-a" href="#">SpaceX's 'Resilience' Lifts 4 Astronauts Into New Era of Spaceflight</a></h3>
-                            <span>Nov 17</span>
-                        </div>
-                        <div>
-                            <img class="suggested-img" src="images/img_5.jpg" alt="Microbes">
-                            <h3 class="suggested-title"><a class="suggested-title-a" href="#">There Microbes May Help Future Martians and Moon People Mine Metal</a></h3>
-                            <span>Nov 14</span>
-                        </div>
-                        <div>
-                            <img class="suggested-img" src="images/img_6.jpg" alt="Space Station">
-                            <h3 class="suggested-title"><a class="suggested-title-a" href="#">How the Space Station Became a Base to Launch humanity's Future</a></h3>
-                            <span>Nov 13</span>
-                        </div>
+                    <div class="suggested-left">
+                            <div class="row-1">
+                                <img class="suggested-img" src="images/img_1.jpg" alt="missile">
+                                <h3 class="suggested-title"><a class="suggested-title-a" href="#">launches moon mission to bring back lunar rocks.</a></h3>
+                                <span>Nov 23</span>
+                            </div>
+                            <div class="row-1">
+                                <img class="suggested-img" src="images/img_2.jpg" alt="observatory">
+                                <h3 class="suggested-title"><a class="suggested-title-a" href="">Observatory, a Great Eye on the Cosmos, Is Going Dark</a></h3>
+                                <span>Nov 22</span>
+                            </div>
+                            <div class="row-1">
+                                <img class="suggested-img" src="images/img_3.jpg" alt="observatory">
+                                <h3 class="suggested-title"><a class="suggested-title-a" href="#">Signs of recent volcanic eruptions on mars hunt at habitat for life</a></h3>
+                                <span>Nov 8</span>
+                            </div>
+                            <div class="row-2">
+                                <img class="suggested-img" src="images/img_4.jpg" alt="SpaceX's">
+                                <h3 class="suggested-title"><a class="suggested-title-a" href="#">SpaceX's 'Resilience' Lifts 4 Astronauts Into New Era of Spaceflight</a></h3>
+                                <span>Nov 17</span>
+                            </div>
+                            <div class="row-2">
+                                <img class="suggested-img" src="images/img_5.jpg" alt="Microbes">
+                                <h3 class="suggested-title"><a class="suggested-title-a" href="#">There Microbes May Help Future Martians and Moon People Mine Metal</a></h3>
+                                <span>Nov 14</span>
+                            </div>
+                            <div class="row-2">
+                                <img class="suggested-img" src="images/img_6.jpg" alt="Space Station">
+                                <h3 class="suggested-title"><a class="suggested-title-a" href="#">How the Space Station Became a Base to Launch humanity's Future</a></h3>
+                                <span>Nov 13</span>
+                            </div>
                     </div>
 
                 </div>
@@ -498,6 +498,9 @@
             <a class="footer-end-a" href="#">subscriptions</a>
         </div> 
     </footer>
+    <div class="footer-bottom">
+        <p class="footer-bottom-text">Access more of the TImes by creating a free account or <a class="last-a" href="#">logging in.</a></p>
+    </div>
 
 </body>
 </html>
