Added Newsletter section and also made some more changes.

--- a/index.html
+++ b/index.html
@@ -312,6 +312,63 @@
             
             <div class="suggested">
                 <div class="suggested-news">
+                    <div class="newletter__header">
+                        <h2>Suggested Newsletters for you</h2>
+                        <a class="newletter-link" href="#">Don't show me this again.</a>
+                    </div>
+                    <div class="newsletter__main">
+                        <div class="card">
+                            <div>
+                                <img class="card__img" src="images/TheMorning-Icon.png" alt="morning">
+                            </div>
+                            <div>
+                                <p class="card__img-text-1">DAILY</p>
+                            </div>
+                            <div><p class="card__img-text-2">The Morning</p></div>
+                            <div>
+                                <p class="card__img-text-3">
+                                    Make sense of the day’s news and ideas. David Leonhardt and Times journalists guide you through what’s happening — and why it matters.
+                                </p>
+                            </div>
+                            <div class="card-link">
+                                <a class="card-link-a" href="#">see the lastest</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div>
+                                <img class="card__img" src="images/Breaking.png" alt="morning">
+                            </div>
+                            <div>
+                                <p class="card__img-text-1">AS NEEDED</p>
+                            </div>
+                            <div><p class="card__img-text-2">Breaking News</p></div>
+                            <div>
+                                <p class="card__img-text-3">
+                                    Alerts when important news breaks around the world.
+                                </p>
+                            </div>
+                            <div class="card-link">
+                                <a class="card-link-a" href="#">see the lastest</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div>
+                                <img class="card__img" src="images/NYT-AtHome-Icon-REV.png" alt="morning">
+                            </div>
+                            <div>
+                                <p class="card__img-text-1">WEEKLY</p>
+                            </div>
+                            <div><p class="card__img-text-2">At Home</p></div>
+                            <div>
+                                <p class="card__img-text-3">
+                                    Our best suggestions for how to live a full and cultured life during the pandemic, at home.
+                                </p>
+                            </div>
+                            <div class="card-link">
+                                <a class="card-link-a" href="#">see the lastest</a>
+                            </div>
+                        </div>
+                    </div>
                     <h2>More in space and Astronomy</h2>
                     <div class="suggested-left">
                             <div class="row-1">
