--- a/index.html
+++ b/index.html
@@ -293,6 +293,27 @@
                     <p class="article__end-text">
                         A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline: Space Ripples Reveal Big Bang’s Smoking Gun. <a class="article__end-links" href="#">Order Reprints</a> | <a class="article__end-links" href="#">Today’s Paper</a> | <a class="article__end-links" href="#">Subscribe</a>
                     </p>
+                    <div class="article-form">
+                        <form action="#" class="form" method="POST">
+                            <ul>
+                                <li class="form-list">
+                                    <label class="form-list-l" for="name">Name</label>
+                                    <input class="form-list-i" type="text" id="name" placeholder="Your Name here" required>
+                                </li>
+                                <li class="form-list">
+                                    <label class="form-list-l" for="email">Email</label>
+                                    <input class="form-list-i" type="email" id="email" placeholder="Your Email here" required>
+                                </li>
+                                <li class="form-list">
+                                    <label class="form-list-l" for="comment">Comments</label>
+                                    <textarea class="form-list-i" id="comment" cols="30" rows="10" required placeholder="comments here //"></textarea>
+                                </li>
+                                <li class="form-list">
+                                    <input type="submit" class="article__end-btn" value="Submit">
+                                </li>
+                            </ul>
+                        </form>
+                    </div>
                     <div class="article__end">
                         <div>
                             <input class="article__end-btn" type="button" value="Read Comments">
